changed file name to start with 0

--- a/todo-app/02-submit-and-input-field/index.html
+++ b/todo-app/02-submit-and-input-field/index.html
@@ -3,4 +3,4 @@
 <title></title>
 <body>
 <script src="/__build__/shared.js"></script>
-<script src="/__build__/7-mark-done.js"></script>
+<script src="/__build__/02-submit-and-input-field.js"></script>
