--- a/todo-app/07-mark-done/index.html
+++ b/todo-app/07-mark-done/index.html
@@ -3,4 +3,4 @@
 <title></title>
 <body>
 <script src="/__build__/shared.js"></script>
-<script src="/__build__/1-minimal-reactjs-setup.js"></script>
+<script src="/__build__/07-mark-done.js"></script>
