--- a/todo-app/14-use-css/index.html
+++ b/todo-app/14-use-css/index.html
@@ -204,9 +204,9 @@ body {
     </div>
     <div id="credits">
       Created by:
-      <a href="https://twitter.com/ssorallen?rel=author">Ross Allen</a><br>
+      <a href="https://bigbinary.com">BigBinary</a><br>
       The source:
-      <a href="https://github.com/ssorallen/reacttodos">ssorallen/reacttodos</a><br>
+      <a href="https://github.com/bigbinary/tiny-reactjs-concepts">bigbinary/tiny-reactjs-concepts</a><br>
       Adapted from:
       <a href="http://localtodos.com/">Backbone.js Todos</a>
     </div>
